fixed white spacing in contact boxes on media subpage

--- a/src/styles/page-contact/contact.scss
+++ b/src/styles/page-contact/contact.scss
@@ -15,7 +15,7 @@
     box-shadow: 0px 0px 5px 2px var(--copBlue);
     div {
       height: 100%;
-      width: 30%;
+      width: 32%;
       justify-content: center;
 
       img {
@@ -38,6 +38,8 @@
         list-style: none;
         align-self: start;
         align-items: start;
+        padding: 0;
+        margin: 0;
 
         li {
           flex-flow: row wrap;
