--- a/src/styles/page-shows/shows.scss
+++ b/src/styles/page-shows/shows.scss
@@ -39,7 +39,7 @@
         }
 
         li {
-          margin: 0.3rem 3rem;
+          margin-left: 2rem;
         }
       }
 
